--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,3 @@
-<div class="container-fluid">
+<div class="container">
     <app-carousel></app-carousel>
-    <div class="titles">
-      <h2>HELLO NAME</h2>
-      <h2>ANOTHER NAME</h2>
-      <h2>THIRD PROJECT</h2>
-      <h2>YET ANOTHER</h2>
-      <h2>I WISH, RIGHT?</h2>
-    </div>
 </div>
