--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -8,22 +8,26 @@ h1 {
   padding-bottom: 40px;
   padding-left: 20px;
 }
-.titles {
-  padding-left: 20px;
-  padding-top: 60px;
+
+h2 {
+  font-size: 60px;
 }
+.titles {
+  padding-top: 40px;
+}
+
 .bla {
-  height:200px;
-  min-width:230px;
+  height: 200px;
+  min-width: 230px;
   background: rebeccapurple;
 }
 .owl-carousel .item {
-    height: 10rem;
-    background: #4DC7A0;
-    padding: 1rem;
+  height: 10rem;
+  background: #4DC7A0;
+  padding: 1rem;
 }
 .carousel-item {
-  height:200px;
-  min-width:230px;
-  background:darkblue;
+  height: 200px;
+  min-width: 230px;
+  background: darkblue;
 }
