--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div class="container">
-    <app-carousel></app-carousel>
+<app-sidebar></app-sidebar>
+<div class="container-fluid">
+  <app-carousel></app-carousel>
 </div>
