--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,20 +1,6 @@
-<owl-carousel
-  #owlElement
-  [options]="{
-    center: true,
-    items:2,
-    loop:true,
-    margin:10,
-    onChanged: callback
-  }">
-  <div *ngFor="let project of projects">
-    <div class="bla">{{ project.title }}</div>
-  </div>
-</owl-carousel>
-
 <div class="row">
-    <div *ngFor="let project of projects; let i = index"
-      class="titles col-md-6 col-lg-4">
-      <h2 on-mouseover="hoverSelect(i)"> {{ project.title }} </h2>
-    </div>
+  <div class="col-md-6">
+    <h1 style="color:white">hello</h1>
+    <img src="" alt="">
+  </div>
 </div>
